1999-11-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98c

	* libntp/syssignal.c: Don't warn about SA_RESTART
	* libntp/recvbuff.c: Fix free buffer count
	From: Jeffrey C Honig <jch@bsdi.com>

	* html/pps.htm: 
	* html/howto.htm: 
	* html/confopt.htm: 
	* html/clockopt.htm: 
	* html/uthopt.htm:
	Updates.
	From: Dave Mills <mills@udel.edu>

	* ntpd/refclock_wwvb.c: burst fixes
	* ntpd/refclock_ulink.c: burst fixes
	* ntpd/refclock_tpro.c: burst and NSTAGE fixes
	* ntpd/refclock_pst.c: burst fixes
	* ntpd/refclock_irig.c: SAMPLE -> SAMPLES
	* ntpd/refclock_heath.c: burst fixes
	* ntpd/refclock_dumbclock.c: burst fixes
	* ntpd/refclock_chronolog.c: burst fixes
	* ntpd/refclock_bancomm.c: burst fixes
	* ntpd/refclock_atom.c: burst fixes
	* ntpd/refclock_as2201.c: burst fixes
	* ntpd/ntp_refclock.c: PPSAPI, code, and comment cleanup/fixes
	* ntpd/ntp_proto.c: Broadcast/restrict cleanup
	* ntpd/ntp_loopfilter.c: Cleanup and fixes
	* libntp/gpstolfp.c: Lose the UL qualifiers - old compilers hate them
	From: Dave Mills <mills@udel.edu>
	
1999-10-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: TIOCSPPS cleanup

1999-10-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98b

	* ntpd/refclock_atom.c: AIOCTIMESTAMP patch
	* ntpd/ntpd.c: SCO clock patch
	* ntpd/ntp_request.c: noselect patch
	* ntpd/ntp_refclock.c: AIOCTIMESTAMP patch
	* ntpd/ntp_proto.c: noselect patch
	* ntpd/ntp_intres.c: noselect patch
	* ntpd/ntp_config.c: noselect patch
	* include/ntp_request.h: noselect patch
	* include/ntp.h: noselect patch
	From: Kamal A Mostafa <kamal@whence.com>

	* configure.in: 
	* acconfig.h: TTYCLK_AIOCTIMESTAMP
	Stuff for Kamal

	* ntpd/refclock_atom.c (atom_pps): make "result" initialization
	uglier, but more bulletproof.

	* configure.in (sys/timepps.h): Fixed.
	From: John Hay <jhay@mikom.csir.co.za>

1999-10-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_oncore.c: Rename instance.state to instance.o_state
