@@ -3,6 +3,7 @@
  */
 
 #include "ntp_syslog.h"
+#include "ntp_select.h"
 #include "ntp_fp.h"
 #include "ntp.h"
 #include "ntp_malloc.h"
