@@ -28,7 +28,6 @@
 #include <signal.h>
 
 #include "ntpd.h"
-#include "ntp_select.h"
 #include "ntp_io.h"
 #include "ntp_request.h"
 #include "ntp_stdlib.h"
