@@ -69,7 +69,6 @@
 #endif /* SYS_DOMAINOS */
 
 #include "ntpd.h"
-#include "ntp_select.h"
 #include "ntp_io.h"
 
 #include "ntp_stdlib.h"
